[autofix.ci] apply automated fixes